tdf#166185 vcl print preview: only ORIENTATION_AUTOMATIC resizes paper

This improves my 7.3 commit 324daa38a823477e1d1b650b5d91f3dc91c6a9af
    tdf#129638 print preview: use new paper size after switching page
which should only do that for automatic paper size and orientation.

I don't see any change in the dialog resulting from this
but it seemed to be "more correct" as I was testing this bug report.

Change-Id: Icd480f54b17f57612746278c72761cc9e2afd553
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192925
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins